--- a/bigram_counts.ipynb
+++ b/bigram_counts.ipynb
@@ -5,11 +5,10 @@
    "metadata": {},
    "source": [
     "### 参考资料：\n",
-    "* [linux-wget.md](https://gist.github.com/JingwenTian/d48e457a54292b7718b2)\n",
-    "* [序列中出现次数最多的元素](http://python3-cookbook.readthedocs.io/zh_CN/latest/c01/p12_determine_most_freqently_items_in_seq.html)\n",
-    "* [Forming Bigrams of words in list of sentences with Python](coursera.org/specializations/deep-learning)\n",
-    "* [Python文本处理——中文标点符号处理](Python文本处理——中文标点符号处理)\n",
-    "* [详解Python中re.sub](https://www.crifan.com/python_re_sub_detailed_introduction/)"
+    "* 下载文件：[linux-wget.md](https://gist.github.com/JingwenTian/d48e457a54292b7718b2)\n",
+    "* 统计词频：[序列中出现次数最多的元素](http://python3-cookbook.readthedocs.io/zh_CN/latest/c01/p12_determine_most_freqently_items_in_seq.html)\n",
+    "* 切割二元词组：[Forming Bigrams of words in list of sentences with Python](coursera.org/specializations/deep-learning)\n",
+    "* 处理中文标点：[Python文本处理——中文标点符号处理](http://www.cnblogs.com/arkenstone/p/6092255.html) 和 [Zhon](http://zhon.readthedocs.io/en/latest/#)"
    ]
   },
   {
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +81,8 @@
     "import zhon.hanzi as zh\n",
     "from collections import Counter\n",
     "\n",
-    "lst1 = re.split(r'[{}]'.format(zh.punctuation), content)\n",
-    "lst2 = [s.strip() for s in lst1]\n",
-    "lst3 = [s.replace('― ―', '') for s in lst2]"
+    "lst1 = re.split(r'[{}]'.format(zh.punctuation), content)  # 用zhon包按照中文标点进行切割成列表\n",
+    "lst2 = [s.replace('― ―', '') for s in lst1]  # 去掉文章中的‘- -’符号"
    ]
   },
   {
@@ -96,13 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "bigrams = [b for l in lst3 for b in zip(l.split()[:-1], l.split()[1:])]"
+    "bigrams = [b for l in lst3 for b in zip(l.split()[:-1], l.split()[1:])]  # 进行二元词组分词"
    ]
   },
   {
@@ -116,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
