--- a/numpy_tutorial.ipynb
+++ b/numpy_tutorial.ipynb
@@ -439,6 +439,125 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Printing Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(6)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2]\n",
+      " [ 3  4  5]\n",
+      " [ 6  7  8]\n",
+      " [ 9 10 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.arange(12).reshape(4,3)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0  1  2  3]\n",
+      "  [ 4  5  6  7]\n",
+      "  [ 8  9 10 11]]\n",
+      "\n",
+      " [[12 13 14 15]\n",
+      "  [16 17 18 19]\n",
+      "  [20 21 22 23]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = np.arange(24).reshape(2,3,4)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[   0    1    2 ..., 9997 9998 9999]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.arange(10000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   0    1    2 ...,   97   98   99]\n",
+      " [ 100  101  102 ...,  197  198  199]\n",
+      " [ 200  201  202 ...,  297  298  299]\n",
+      " ..., \n",
+      " [9700 9701 9702 ..., 9797 9798 9799]\n",
+      " [9800 9801 9802 ..., 9897 9898 9899]\n",
+      " [9900 9901 9902 ..., 9997 9998 9999]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.arange(10000).reshape(100,100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
