--- a/numpy_tutorial.ipynb
+++ b/numpy_tutorial.ipynb
@@ -1569,32 +1569,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n"
+     ]
+    }
+   ],
+   "source": [
+    "for element in b.flat:\n",
+    "    print(element)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Changing the shape of an array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.,  3.,  5.,  2.],\n",
+       "       [ 4.,  7.,  6.,  8.],\n",
+       "       [ 5.,  4.,  0.,  5.]])"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.floor(10*np.random.random((3,4)))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.,  3.,  5.,  2.,  4.,  7.,  6.,  8.,  5.,  4.,  0.,  5.])"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.,  3.],\n",
+       "       [ 5.,  2.],\n",
+       "       [ 4.,  7.],\n",
+       "       [ 6.,  8.],\n",
+       "       [ 5.,  4.],\n",
+       "       [ 0.,  5.]])"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.reshape(6,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.,  4.,  5.],\n",
+       "       [ 3.,  7.,  4.],\n",
+       "       [ 5.,  6.,  0.],\n",
+       "       [ 2.,  8.,  5.]])"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 3)"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.T.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 4)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.,  3.,  5.,  2.],\n",
+       "       [ 4.,  7.,  6.,  8.],\n",
+       "       [ 5.,  4.,  0.,  5.]])"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "for element in b.flas"
+    "a.resize((2,6))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.,  3.,  5.,  2.,  4.,  7.],\n",
+       "       [ 6.,  8.,  5.,  4.,  0.,  5.]])"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.,  3.,  5.,  2.],\n",
+       "       [ 4.,  7.,  6.,  8.],\n",
+       "       [ 5.,  4.,  0.,  5.]])"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.reshape(3, -1)"
+   ]
   },
   {
    "cell_type": "code",
