Splitting one array into several smaller ones

--- a/numpy_tutorial.ipynb
+++ b/numpy_tutorial.ipynb
@@ -216,7 +216,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = np.array([1,2,3,4])"
@@ -551,7 +553,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.set_printoptions(threshold='nan')"
@@ -2026,21 +2030,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 0, 4])"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.r_[1:4,0,4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Splitting one array into several smaller ones"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 7.,  8.,  0.,  7.,  7.,  4.,  1.,  4.,  6.,  1.,  8.,  5.],\n",
+       "       [ 8.,  8.,  0.,  1.,  5.,  5.,  7.,  5.,  0.,  3.,  0.,  5.]])"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.floor(10*np.random.random((2,12)))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[ 7.,  8.,  0.,  7.],\n",
+       "        [ 8.,  8.,  0.,  1.]]), array([[ 7.,  4.,  1.,  4.],\n",
+       "        [ 5.,  5.,  7.,  5.]]), array([[ 6.,  1.,  8.,  5.],\n",
+       "        [ 0.,  3.,  0.,  5.]])]"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hsplit(a,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[ 7.,  8.,  0.],\n",
+       "        [ 8.,  8.,  0.]]), array([[ 7.],\n",
+       "        [ 1.]]), array([[ 7.,  4.,  1.,  4.,  6.,  1.,  8.,  5.],\n",
+       "        [ 5.,  5.,  7.,  5.,  0.,  3.,  0.,  5.]])]"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hsplit(a,(3,4))"
+   ]
   },
   {
    "cell_type": "code",
