--- a/deeplearning-demo.ipynb
+++ b/deeplearning-demo.ipynb
@@ -81,6 +81,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n",
+      "[[0]\n",
+      " [1]\n",
+      " [2]\n",
+      " [3]]\n",
+      "[0]\n",
+      "[2]\n",
+      "[4]\n",
+      "[6]\n",
+      "[4]\n",
+      "[6]\n",
+      "[8]\n",
+      "[10]\n",
+      "[8]\n",
+      "[10]\n",
+      "[12]\n",
+      "[14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# a.shape = (3,4)\n",
+    "# b.shape = (4,1)\n",
+    "a = np.arange(12).reshape(3,4)\n",
+    "b = np.arange(4).reshape(4,1)\n",
+    "c = np.array\n",
+    "\n",
+    "print(a)\n",
+    "print(b)\n",
+    "for i in range(3):\n",
+    "  for j in range(4):\n",
+    "    print(a[i][j]+b[j])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = np.random.randn(3, 3)\n",
+    "b = np.random.randn(3, 1)\n",
+    "c = a*b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.59043718,  0.07016649,  0.75308494],\n",
+       "       [-1.25758321,  0.72539702,  0.57391019],\n",
+       "       [-2.35818603,  1.57922467, -1.04984892]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
