advanced task two

--- a/bigram_counts.ipynb
+++ b/bigram_counts.ipynb
@@ -181,43 +181,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.使用标准正态分布生成一个 100 元素的数组（以 0 为均值）"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 0.87051886,  1.74541981, -1.00808974, -0.37076095,  0.31510354,\n",
-       "        -1.40825092, -1.4856442 , -1.41516778, -1.04765926, -0.34389618],\n",
-       "       [-0.1807049 ,  1.61060053,  0.2080588 ,  0.49644949,  1.49466167,\n",
-       "         0.37897513, -0.34496119,  0.16126434,  0.53757876,  1.26474212],\n",
-       "       [-0.82989172,  1.90867292,  0.28290912,  1.39777905,  0.62537499,\n",
-       "         0.31412424, -0.90049584,  1.34780994,  0.76500924, -0.05625237],\n",
-       "       [ 1.08461175,  0.77288054,  1.05595623, -0.30150769, -0.61999695,\n",
-       "        -0.69640414,  0.32873155,  0.3019611 ,  0.19796352,  1.10507357],\n",
-       "       [-0.46876279, -0.60154497,  0.84271615, -0.74743339,  2.5573627 ,\n",
-       "         0.70282419, -0.03378469, -0.23062298,  0.56892326,  0.3332943 ],\n",
-       "       [ 1.34372845, -0.22450575, -0.38177209,  0.01282641, -0.73374377,\n",
-       "        -1.34612828, -0.96566286,  0.17161948, -0.10344273,  1.06642065],\n",
-       "       [-1.40524251,  0.15241935,  0.85415238, -0.24590109,  1.83021309,\n",
-       "         0.04184538, -0.09436043, -0.38491017, -0.40603984,  0.25605637],\n",
-       "       [ 0.23168022,  0.8596466 , -1.84046078,  0.96573383,  1.0578217 ,\n",
-       "         0.82382667,  0.14031703, -0.02019668, -0.25072944,  0.62605185],\n",
-       "       [-0.54951253, -0.26993822, -0.57314019,  0.29521006, -0.46897955,\n",
-       "        -0.36253072, -0.23793616,  1.61280472, -2.98531194,  0.5775072 ],\n",
-       "       [-0.49993928, -0.21053174,  0.50074174,  0.01871075, -0.04261468,\n",
-       "        -0.79083742, -0.43630167, -1.55488476,  0.13443016,  0.40895639]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.30968644  0.67529345 -0.12598747 -2.18773657 -0.56248453  1.2059893\n",
+      "  -0.66647715 -1.47072489  0.70109959  0.27528627]\n",
+      " [ 2.90514208 -0.2767408  -0.55835501 -0.74013097 -0.7845294   0.08612704\n",
+      "   0.25762021  0.13253942  0.36717156  0.88138477]\n",
+      " [ 0.62135644  1.08715734 -0.85988339 -0.17396061 -0.23253893 -1.55740821\n",
+      "  -0.7600189  -1.34371466 -0.87756962  0.41614416]\n",
+      " [ 2.08813768 -0.53598287  0.01881603  1.07672489 -0.83238493 -1.3569904\n",
+      "   0.08042126  1.64187784 -0.12963276 -0.83831965]\n",
+      " [-0.98833694 -1.2016546   1.47099556 -1.94462779  1.28275996  0.00761649\n",
+      "  -2.79601869 -1.95701241 -1.01523503 -0.69248932]\n",
+      " [-0.63502422  0.17364674  0.40438084  1.50149591 -0.74445294  0.68418876\n",
+      "   0.13979321 -0.71150186 -0.89718946 -0.79091868]\n",
+      " [ 1.14576874  0.58548419 -0.27965825  0.0640816   1.96326739  3.12983968\n",
+      "   0.05451965 -1.26438684 -0.47040943 -1.71041498]\n",
+      " [-1.52402993  0.54496626 -2.24128293 -1.26267516  0.00643375 -0.89900971\n",
+      "  -0.02497535 -0.54083986  0.25069326  1.69217529]\n",
+      " [-0.91206749 -1.44135976 -1.56738158 -1.00646306  1.72654371  0.39544779\n",
+      "   2.17242181 -0.40097889  1.43181783 -2.05329297]\n",
+      " [-1.31052573 -0.49539188  0.31519801 -0.49450485 -0.74520296 -0.85632677\n",
+      "   1.41701052  0.48727752  1.19140561  0.32161222]]\n"
+     ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "np.random.normal(size=(10,10))"
+    "a = np.random.randn(10,10)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. 用向量化方法将这个数组中 < 0 的元素设置成 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.          0.67529345  0.          0.          0.          1.2059893\n",
+      "   0.          0.          0.70109959  0.27528627]\n",
+      " [ 2.90514208  0.          0.          0.          0.          0.08612704\n",
+      "   0.25762021  0.13253942  0.36717156  0.88138477]\n",
+      " [ 0.62135644  1.08715734  0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.41614416]\n",
+      " [ 2.08813768  0.          0.01881603  1.07672489  0.          0.\n",
+      "   0.08042126  1.64187784  0.          0.        ]\n",
+      " [ 0.          0.          1.47099556  0.          1.28275996  0.00761649\n",
+      "   0.          0.          0.          0.        ]\n",
+      " [ 0.          0.17364674  0.40438084  1.50149591  0.          0.68418876\n",
+      "   0.13979321  0.          0.          0.        ]\n",
+      " [ 1.14576874  0.58548419  0.          0.0640816   1.96326739  3.12983968\n",
+      "   0.05451965  0.          0.          0.        ]\n",
+      " [ 0.          0.54496626  0.          0.          0.00643375  0.          0.\n",
+      "   0.          0.25069326  1.69217529]\n",
+      " [ 0.          0.          0.          0.          1.72654371  0.39544779\n",
+      "   2.17242181  0.          1.43181783  0.        ]\n",
+      " [ 0.          0.          0.31519801  0.          0.          0.\n",
+      "   1.41701052  0.48727752  1.19140561  0.32161222]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = a < 0\n",
+    "a[b] = 0 \n",
+    "print(a)"
    ]
   },
   {
