--- a/bigram_counts.ipynb
+++ b/bigram_counts.ipynb
@@ -177,6 +177,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 参考资料\n",
+    "* [SymPy：使用 Python 幫你導煩人的數學公式](https://blog.gtwang.org/useful-tools/sympy-python-library-for-symbolic-mathematics/3/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 进阶任务二"
    ]
   },
@@ -268,6 +276,14 @@
     "b = a < 0\n",
     "a[b] = 0 \n",
     "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 参考资料\n",
+    "* [Quickstart tutorial](https://docs.scipy.org/doc/numpy-dev/user/quickstart.html)"
    ]
   },
   {
