NN-classfy update

--- a/NN-classfy.ipynb
+++ b/NN-classfy.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,14 +116,14 @@
     "for sentence in sentences:\n",
     "    words_cut = []\n",
     "    for words in jieba.cut(sentence):\n",
-    "        if words >= u'u4e00' and words <= u'u9fa5'\n",
+    "        if words >= u'\\u4e00' and words <= u'\\u9fff':\n",
     "            words_cut.append(words)\n",
     "    sentencts_cut.append(words_cut)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 84,
    "metadata": {
     "scrolled": true
    },
@@ -151,7 +151,7 @@
        "  '吧']]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
